Just spelling corrections

--- a/sage_latex_template_3/Bins.Rmd
+++ b/sage_latex_template_3/Bins.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Matching in Cluster Randomized Trials Using the Glodilocks Approach"
+title: "Matching in Cluster Randomized Trials Using the Goldilocks Approach"
 author:
 - name: S. Gwynn Sturdevant, Ken Kleinman
   affiliation: University of Massachusetts Amherst
@@ -19,12 +19,12 @@ date: "`r format(Sys.time(), '%B %d, %Y')`"
 ## Introduction
 To determine the efficacy of a treatment, individually randomized trials (IRTs) with blinding are the "strongest study design available" [@gatsonis2017methods]. Unfortunately, cost and study design amongst other things mean some interventions can not be randomized on an individual level. For example, education researchers decide to determine if training elementary school teachers in a reading program will affect literacy skills in third graders. Randomizing each third grader to treatment or control would not be suitable, as this equates to randomly allocating students to a teacher; rural schools tend to be smaller with only one teacher which further complicates matters. Instead, researchers may choose to randomize teachers, schools, or counties to determine any differences between the two arms of the study. Trials where groups are randomized are called cluster randomized trials (CRTs). Three reasons for conducting a CRTs are: (i) implementation occurs at the cluster level, (ii) to avoid contamination, and (iii) to measure intervention effects among cluster members who do not receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
 
-One challenge in CRTs is their limited sample size. Most CRTs have less than 30 independent units to randomise, though each unit may have thousands of dependent individuals [@balzer2012match]. In IRTs, investigators expect randomisation to balance confounders across each arm of the trial, but the reduced size of CRTs makes this unlikely. Grouping similar units together, then randomizing, is one solution to this. Scholars debate the sizes of these groups, in particular, matching, which involves grouping 2 units together, and stratifying, where many more than 2 units are grouped[@PMVsStrat]. This article discusses matching. 
+One challenge in CRTs is their limited sample size. Most CRTs have less than 30 independent units to randomize, though each unit may have thousands of dependent individuals [@balzer2012match]. In IRTs, investigators expect randomization to balance confounders across each arm of the trial, but the reduced size of CRTs makes this unlikely. Grouping similar units together, then randomizing, is one solution to this. Scholars debate the sizes of these groups, in particular, matching, which involves grouping 2 units together, and stratifying, where many more than 2 units are grouped[@PMVsStrat]. This article discusses matching. 
 
 Many authors debate matching in CRTs [@balzer2012match; @CRTrials2009; @gatsonis2017methods; @diehr1995breaking; @murray1998design; @imai2009essential;
-@PMVsStrat; @donner2007merits; @klar1997merits; @donner2000design; @martin1993effect]. Murray argues that "the choice of matching or stratification [of] factors is critical to the success of the procedure" [@murray1998design]. Some agree that caution must be used when matching a small number of clusters due to the decrease in power [@donner2000design; @klar1997merits; @balzer2012match; @martin1993effect]. Breaking matches in the analysis stage addresses this [@diehr1995breaking], but perhaps only when there are a small number of large clusters [@donner2007merits].  Others argue that matching is effective in a small number of clusters as it "increases the chance of the intervention groups being well-balanced" [@donner2007merits]. Imai et al argue that not matching, in small or large sample, is "equivalent to discarding a considerable fraction of one's data" [@imai2009essential]. However, in one trial "matching actually led to a loss in statistical efficiency" [@manun1994influence, @donner2000design]. Despite all this debate few authors discuss methodologies to support the matching process [@raab2001balance]. 
+@PMVsStrat; @donner2007merits; @klar1997merits; @donner2000design; @martin1993effect]. Murray argues that "the choice of matching or stratification [of] factors is critical to the success of the procedure" [@murray1998design]. Some agree that caution must be used when matching a small number of clusters due to the decrease in power [@donner2000design; @klar1997merits; @balzer2012match; @martin1993effect]. Breaking matches in the analysis stage addresses this [@diehr1995breaking], but perhaps only when there are a small number of large clusters [@donner2007merits].  Others argue that matching is effective in a small number of clusters as it "increases the chance of the intervention groups being well-balanced" [@donner2007merits]. Imai et al. argue that not matching, in small or large sample, is "equivalent to discarding a considerable fraction of one's data" [@imai2009essential]. However, in one trial "matching actually led to a loss in statistical efficiency" [@manun1994influence, @donner2000design]. Despite all this debate few authors discuss methodologies to support the matching process [@raab2001balance]. 
 
-Our article is an extension of methods introduced in Chapter 4 of Methods in Comparative Effectiveness Research [@gatsonis2017methods]. We suggest a method suitable for $a$ $priori$ matching using baseline data. In section 2 we outline our method, section 3 applies it to the SWAPOUT dataset, and section 4 is a brief discussion.
+Our article is an extension of methods introduced in Chapter 4 of Methods in Comparative Effectiveness Research [@gatsonis2017methods]. We suggest a method suitable for $a$ $priori$ matching using baseline data. In section 2 we outline our method, section 3 applies it to the SWAPOUT data set, and section 4 is a brief discussion.
 
 ## Methods <!-- (#sec:Method) trying to get numbering to work not sure how yet  -->
 
@@ -56,12 +56,12 @@ which we combine to form
  \vdots & = & \vdots\\    
  \overline{V_m^*} & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) .\\
 \end{eqnarray*} 
-and re-run the matching to attain stronger matches for the variable $j$. We again find $d_{ij}$ and plot them. The penality in this process is that closer matches for variable $j$ are likely to imply reduced closeness in another variable, so compromises must be made.
+and re-run the matching to attain stronger matches for the variable $j$. We again find $d_{ij}$ and plot them. The penalty in this process is that closer matches for variable $j$ are likely to imply reduced closeness in another variable, so compromises must be made.
 
 ## Results
 To demonstrate the usefulness of this technique we present a brief summary of our randomization process using baseline data from the SWAPOUT trial (Cluster-randomized Non-inferiority Trial Comparing Mupirocin vs Iodophor for Nasal Decolonization of ICU Patients to Assess Impact on Staphylococcus aureus Clinical Cultures and All-cause Bloodstream Infection During Routine Chlorhexidine Bathing) [@SOTrial]. In this non-inferiority trial, the investigators are studying whether bathing with chlorhexidine gluconate and swabbing iodophor nasal swabs are inferior to bathing with the same and mupirocin nasal swabs. In the REDUCE trial [@huang2013targeted] mupirocin nasal swabs and bathing with chlorhexidine reduced the MRSA Staphylococcus aureus (an antibiotic resistant infection) in Hospital Corporation of America intensive care units (ICU). However, physicians are reluctant to use mupirocin, an antibiotic, so investigators are assessing "swapping"" it with iodophor. 
 
-Primary       | Secondary         |	Tetiary   |	Quaternary | Quinary
+Primary       | Secondary         |	Tertiary   |	Quaternary | Quinary
 ------------- | ----------------- | --------- | ---------- | ---------
 Pt Days       |	Median LOS        |	Medicaid  | DC SNF     | Onc_BMT_Trp
 S auer Rate   |	Comorbidity Score |	PCR Blood | Surgery    | BMT_Trp
@@ -76,7 +76,7 @@ Table: Abbreviations of variables used to randomize
 
 A COMMENT YOU MADE WAS HERE - DATA FROM EMRS/billing records - UNSURE WHAT THIS MEANS!!!!
 
-Prior to randomization baseline data was collected for 20 months on the 137 hospitals. With this data, investigators met to prioritize baseline variables into several categories: primary, secondary, tertiary, quaternary, quinary, and not relevant to randomization. For this trial, the investigators decided that average monthly attributable days, Staphylococcus aureus Intensive Care Unit (ICU)-attributable cultures per 1,000 days, MRSA ICU-attributable cultures per 1,000 days, all pathogen ICU-attributable bacteremia cultures per 1,000 days, regional mupirocin resistance estimate, percent of admissions with MRSA diagnosis within a year, percent of mupirocin use admission to day 5, survey Chlorhexidine Glucominate were all of primary importance. Of secondary importance were median ICU length of stay, and mean elixhauser total score. Of tertiary importance were the percentage of ICU medicaid patients, and whether or not a facility uses Polymerase chain reactions to identify MRSA in blood. Next, percent admissions to skilled nursing facility (SNF), and the percent of admissions with Center for Disease Control and Prevention surveillance surgery. Lastly, if the ICU has specialty units for oncology, bone marrow transplant, or transplant units, and if the ICU has bone marrow transplant or transplant units. More information on each variable is avaliable in appendix 1 and their abbreviations, in the same order, can be found in table 1. To ease understanding, our initial discussion will involve the first 3 variables above: Patient days, Staphylococcus aureus rate, and MRSA rate. 
+Prior to randomization baseline data was collected for 20 months on the 137 hospitals. With this data, investigators met to prioritize baseline variables into several categories: primary, secondary, tertiary, quaternary, quinary, and not relevant to randomization. For this trial, the investigators decided that average monthly attributable days, Staphylococcus aureus Intensive Care Unit (ICU)-attributable cultures per 1,000 days, MRSA ICU-attributable cultures per 1,000 days, all pathogen ICU-attributable bacteremia cultures per 1,000 days, regional mupirocin resistance estimate, percent of admissions with MRSA diagnosis within a year, percent of mupirocin use admission to day 5, survey Chlorhexidine Glucominate were all of primary importance. Of secondary importance were median ICU length of stay, and mean Elixhauser total score. Of tertiary importance were the percentage of ICU medicaid patients, and whether or not a facility uses polymerase chain reactions to identify MRSA in blood. Next, percent admissions to skilled nursing facility (SNF), and the percent of admissions with Center for Disease Control and Prevention surveillance surgery. Lastly, if the ICU has specialty units for oncology, bone marrow transplant, or transplant units, and if the ICU has bone marrow transplant or transplant units. More information on each variable is available in appendix 1 and their abbreviations, in the same order, can be found in table 1. To ease understanding, our initial discussion will involve the first 3 variables above: Patient days, Staphylococcus aureus rate, and MRSA rate. 
 
 ```{r IntroGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE}
 ## install.packages("designmatch")
@@ -897,13 +897,13 @@ upViewport()
 
 ```
 
-Prior to randomization, investigators spent time using a web application built using the \texttt{Shiny} package in \texttt{R}. The purpose of this is to help investigators explore the strengths of matching on multiple variables to see what gives advantageous balance across relevant baseline variables. We recommend deciding on ideal and acheivable maximum differences in study arms and using many combinations of strengths of matching until one is found which ensures randomization is likely to be within those bounds. In the well-known childrens fable The Three Bears, Goldilocks tries three bowls of porridge, one is too hot, the other too cold, and the third is just right [@3Bears]. We recommend a similar procedure applied to strengths of matching, with perhaps more attempts.
+Prior to randomization, investigators spent time using a web application built using the \texttt{Shiny} package in \texttt{R}. The purpose of this is to help investigators explore the strengths of matching on multiple variables to see what gives advantageous balance across relevant baseline variables. We recommend deciding on ideal and achievable maximum differences in study arms and using many combinations of strengths of matching until one is found which ensures randomization is likely to be within those bounds. In the well-known children's fable The Three Bears, Goldilocks tries three bowls of porridge, one is too hot, the other too cold, and the third is just right [@3Bears]. We recommend a similar procedure applied to strengths of matching, with perhaps more attempts.
 
-Figure 1 demonstrates this process using three variables: attributable patient days per month, Staphylococcus auereus rate, and MRSA rate. After initial explorations on the web application, investigators agreed that an ideal maximum mean differences in treatment and control arms for these variables were: 80 attributable patient days per month, 15% difference in Staphylococcus aureus infection rates, and 15% difference in MRSA rate. The graph on the top left shows no strength of matching on any of these variables, the values exceed the maximums in the second and third axis: there is a reasonable chance that if randomization occured with this weighting the Staphylococcus aureus and MRSA rate would be above the desired maximum mean differences in treatment and control arms. To rectify this, positive strengths must be added. In the top-right graph a strength of 8 has been applied to the Staphylococcus auereus rate. In this graph, the matching of hospitals is strongly ajusted so that hospitals with similar Staphylococcus auereus rates are paired. This results in low mean difference between the treatment and control arms in that variable. The values on the middle axis are below the maximum value: if randomization occured using these strengths we are likely to get suitable balance in this variable. Unfortunately, there is a penalty. Hospitals with similar Staphylococcus auereus rates do not have similar attributable patient days per month and MRSA rates, which results in these values exceeding the maximum. In particular, our investigators felt that the chance of attaining MRSA rates above 15% were too high for these strengths. The bottom plot shows the possible mean balances used in the actual randomization for these three variables, the strengths of matching for each variable were 1, 4, and 2, respectively. In all graphs, the black line indicates the mean value of all points on each axis. 
+Figure 1 demonstrates this process using three variables: attributable patient days per month, Staphylococcus aureus rate, and MRSA rate. After initial explorations on the web application, investigators agreed that an ideal maximum mean differences in treatment and control arms for these variables were: 80 attributable patient days per month, 15% difference in Staphylococcus aureus infection rates, and 15% difference in MRSA rate. The graph on the top left shows no strength of matching on any of these variables, the values exceed the maximums in the second and third axis: there is a reasonable chance that if randomization occurred with this weighting the Staphylococcus aureus and MRSA rate would be above the desired maximum mean differences in treatment and control arms. To rectify this, positive strengths must be added. In the top-right graph a strength of 8 has been applied to the Staphylococcus aureus rate. In this graph, the matching of hospitals is strongly adjusted so that hospitals with similar Staphylococcus aureus rates are paired. This results in low mean difference between the treatment and control arms in that variable. The values on the middle axis are below the maximum value: if randomization occurred using these strengths we are likely to get suitable balance in this variable. Unfortunately, there is a penalty. Hospitals with similar Staphylococcus aureus rates do not have similar attributable patient days per month and MRSA rates, which results in these values exceeding the maximum. In particular, our investigators felt that the chance of attaining MRSA rates above 15% were too high for these strengths. The bottom plot shows the possible mean balances used in the actual randomization for these three variables, the strengths of matching for each variable were 1, 4, and 2, respectively. In all graphs, the black line indicates the mean value of all points on each axis. 
 
 Our investigators used this approach with 16 variables. After trying many strengths of matching they found one with the best balance between treatment and control arms for the variables of importance. When the trial was randomized we used these strength to match hospitals in the study, then randomized the first member of each match to either treatment control. The results can be seen in Figure 2. 
 
-One variable in Figure 2, median length of stay, is fixed on one value. For this variable, all computed randomisations had the same mean difference in median length of stay in the control and treatment arm. When randomisation occurs we can be almost certain that we will attain this mean difference in median length of stay in the treatment and control arms.
+One variable in Figure 2, median length of stay, is fixed on one value. For this variable, all computed randomizations had the same mean difference in median length of stay in the control and treatment arm. When randomization occurs we can be almost certain that we will attain this mean difference in median length of stay in the treatment and control arms.
 
 ```{r FullGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE}
 ## install.packages("designmatch")
@@ -1655,7 +1655,7 @@ In matching for SWAPOUT, we standardized all $16$ variables by subtracting the m
 
 If investigators would like to use this method on studies with more than $2$ arms, $d_{ij}$ can be found for multiple combinations of arms and multiple plots can be assessed. 
 
-Future work in this area includes publishing a \texttt{Shiny} web application for investigators to utilise. This application will eventually be an interactive plot that enables users to click on each axis and view where low and high draws of that variable fall for other variables. In some cases, our investigators find that matching on 1 variable seems to give suitable balance throughout. 
+Future work in this area includes publishing a \texttt{Shiny} web application for investigators to use. This application will eventually be an interactive plot that enables users to click on each axis and view where low and high draws of that variable fall for other variables. In some cases, our investigators find that matching on 1 variable seems to give suitable balance throughout. 
 
 ## Appendix
 A more formal explanation of the variables here, in table format, to be checked with Susan.
