--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -428,7 +428,7 @@ BMT\_Trp &\tabularnewline
 
 Table 2: Thorough description of baseline variables used in this paper.
 
-\bibliography{bibliography}
+\bibliography{bibliography.bib}
 
 
 \end{document}
